--- a/src/main/java/fxml/Despachos/Envios/Envios.fxml
+++ b/src/main/java/fxml/Despachos/Envios/Envios.fxml
@@ -24,10 +24,13 @@
             <Line endX="100.0" layoutX="136.0" layoutY="50.0" startX="-100.0" />
             <TableView fx:id="tabla_envios" layoutX="13.0" layoutY="219.0" prefHeight="301.0" prefWidth="226.0">
                <columns>
-                  <TableColumn fx:id="columna_cliente" prefWidth="81.0" text="Cliente" />
-                  <TableColumn fx:id="columna_envio" prefWidth="69.0" text="Cod.Envio" />
-                  <TableColumn fx:id="columna_pedido" prefWidth="75.0" text="Cod.Pedido" />
+                  <TableColumn fx:id="columna_cliente" prefWidth="67.0" text="Cliente" />
+                  <TableColumn fx:id="columna_envio" prefWidth="73.0" text="Cod.Envio" />
+                  <TableColumn fx:id="columna_pedido" prefWidth="85.0" text="Cod.Pedido" />
                </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
             </TableView>
             <TextField fx:id="cliente_buscar" layoutX="119.0" layoutY="101.0" prefHeight="27.0" prefWidth="114.0" />
             <Label layoutX="20.0" layoutY="104.0" prefHeight="21.0" prefWidth="114.0" text="Cliente">
@@ -163,6 +166,7 @@
                                  </font>
                               </Label>
                               <ComboBox fx:id="ordenes_compra_combobox" layoutX="156.0" layoutY="85.0" prefWidth="150.0" />
+                              <Button layoutX="601.0" layoutY="12.0" mnemonicParsing="false" onAction="#agregarCliente" text="+" />
                            </children>
                         </AnchorPane>
                      </children>
