--- a/src/main/java/fxml/Despachos/GuiasDeRemision/GuiasDeRemision.fxml
+++ b/src/main/java/fxml/Despachos/GuiasDeRemision/GuiasDeRemision.fxml
@@ -29,6 +29,9 @@
                   <TableColumn fx:id="columna_envio" prefWidth="79.0" text="Envio" />
                   <TableColumn fx:id="columna_pedido" prefWidth="95.0" text="Pedido" />
                </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
             </TableView>
             <TextField fx:id="cliente_pedido_buscar" layoutX="119.0" layoutY="101.0" prefHeight="27.0" prefWidth="114.0" />
             <Label layoutX="20.0" layoutY="104.0" prefHeight="21.0" prefWidth="114.0" text="Cliente">
