--- a/src/main/java/fxml/Despachos/OrdenesDeSalida/OrdenesDeSalida.fxml
+++ b/src/main/java/fxml/Despachos/OrdenesDeSalida/OrdenesDeSalida.fxml
@@ -24,6 +24,9 @@
                   <TableColumn fx:id="columna_cod_salida" prefWidth="93.0" text="Orden Salilda" />
                   <TableColumn fx:id="columna_pedido_salida" prefWidth="67.0" text="Pedido" />
                </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
             </TableView>
             <TextField fx:id="salida_buscar" layoutX="118.0" layoutY="67.0" prefHeight="27.0" prefWidth="114.0" />
             <Button layoutX="136.0" layoutY="178.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Buscar" />
