--- a/src/main/java/fxml/AgregarEnviosOrdenSalida.fxml
+++ b/src/main/java/fxml/AgregarEnviosOrdenSalida.fxml
@@ -51,6 +51,6 @@
          </children>
       </AnchorPane>
       <Button fx:id="buscarProductoButtom" layoutX="458.0" layoutY="130.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
-      <Button fx:id="agregarProductoButtom" layoutX="458.0" layoutY="360.0" mnemonicParsing="false" onAction="#agregar_envio" prefHeight="25.0" prefWidth="60.0" text="Agregar" />
+      <Button fx:id="boton_agregar_envio" layoutX="458.0" layoutY="360.0" mnemonicParsing="false" onAction="#agregar_envio" prefHeight="25.0" prefWidth="60.0" text="Agregar" />
    </children>
 </AnchorPane>
