carga masiva de cliente - usuarios - proveedores 100% con auditoria

--- a/src/main/java/fxml/RecursosHumanos/Usuarios/UsuariosBotones.fxml
+++ b/src/main/java/fxml/RecursosHumanos/Usuarios/UsuariosBotones.fxml
@@ -35,7 +35,7 @@
          <graphic>
             <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../Imagenes/delete_icon.png" />
+                  <Image url="@../../Imagenes/weight-tool.png" />
                </image>
             </ImageView>
          </graphic>
