ordenes de salida tab otros

--- a/src/main/java/fxml/Despachos/OrdenesDeSalida/OrdenesDeSalida.fxml
+++ b/src/main/java/fxml/Despachos/OrdenesDeSalida/OrdenesDeSalida.fxml
@@ -19,116 +19,6 @@
 
 <AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Facturacion.OrdenesDeSalidaController">
    <children>
-      <AnchorPane fx:id="envio_formulario" layoutX="260.0" layoutY="-1.0" prefHeight="572.0" prefWidth="750.0">
-         <children>
-            <AnchorPane layoutX="1.0" prefHeight="51.0" prefWidth="750.0" AnchorPane.bottomAnchor="522.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
-               <children>
-                  <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="51.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label fx:id="LabelPedido" layoutX="38.0" layoutY="11.0" text="Detalle Orden de salida:">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Label>
-                  <Line endX="600.0" layoutX="133.0" layoutY="49.0" startX="-100.0" />
-                  <Label layoutX="117.0" layoutY="11.0">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Label>
-               </children>
-            </AnchorPane>
-            <TabPane layoutY="140.0" prefHeight="442.0" prefWidth="750.0" tabClosingPolicy="UNAVAILABLE">
-              <tabs>
-                <Tab text="Envios">
-                     <content>
-                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
-                           <children>
-                              <TitledPane animated="false" collapsible="false" prefHeight="206.0" prefWidth="737.0" text="Informacion del envio" AnchorPane.topAnchor="0.0">
-                                 <content>
-                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="185.0" prefWidth="735.0">
-                                       <children>
-                                          <TableView fx:id="tabla_productos" layoutX="14.0" layoutY="32.0" prefHeight="123.0" prefWidth="539.0">
-                                            <columns>
-                                              <TableColumn fx:id="envio_cod_producto" prefWidth="152.0" text="Código" />
-                                              <TableColumn fx:id="envio_nombre_producto" minWidth="0.0" prefWidth="162.0" text="Nombre" />
-                                                <TableColumn fx:id="envio_desc_producto" minWidth="0.0" prefWidth="224.0" text="Descripcion" />
-                                            </columns>
-                                          </TableView>
-                                          <Label layoutX="15.0" text="Productos">
-                                             <font>
-                                                <Font size="16.0" />
-                                             </font>
-                                          </Label>
-                                          <Button fx:id="buscar_envio_button" layoutX="570.0" layoutY="10.0" mnemonicParsing="false" onAction="#handle_buscar_pedido" prefHeight="25.0" prefWidth="145.0" text="Buscar envio">
-                                             <font>
-                                                <Font size="14.0" />
-                                             </font>
-                                          </Button>
-                                          <Label layoutX="571.0" layoutY="45.0" text="Código Envio" />
-                                          <Label layoutX="567.0" layoutY="100.0" text="Código Pedido" />
-                                          <TextField fx:id="envio_dato" layoutX="569.0" layoutY="69.0" />
-                                          <TextField fx:id="pedido_dato" layoutX="568.0" layoutY="125.0" />
-                                       </children>
-                                    </AnchorPane>
-                                 </content>
-                              </TitledPane>
-                              <TitledPane animated="false" collapsible="false" minHeight="-Infinity" prefHeight="200.0" prefWidth="163.0" text="Acciones">
-                                 <content>
-                                    <AnchorPane prefHeight="200.0" prefWidth="158.0">
-                                       <children>
-                                          <Button layoutX="61.0" layoutY="39.0" mnemonicParsing="false" onAction="#agregar_envio" prefHeight="40.0" prefWidth="40.0" text="A" AnchorPane.topAnchor="39.0" />
-                                          <Button layoutX="61.0" layoutY="140.0" mnemonicParsing="false" onAction="#eliminar_envio" prefHeight="40.0" prefWidth="40.0" text="X" />
-                                          <Label layoutX="42.0" layoutY="100.0" text="Agregar Envio" />
-                                          <Label layoutX="46.0" layoutY="194.0" text="Eliminar Envio" />
-                                       </children>
-                                    </AnchorPane>
-                                 </content>
-                              </TitledPane>
-                           </children>
-                        </AnchorPane>
-                     </content>
-                  </Tab>
-                <Tab text="Otros" />
-              </tabs>
-            </TabPane>
-            <AnchorPane layoutX="15.0" layoutY="60.0" prefHeight="80.0" prefWidth="728.0">
-               <children>
-                  <Label layoutX="15.0" layoutY="12.0" text="Tipo :">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <ComboBox fx:id="tipos" layoutX="80.0" layoutY="10.0" prefWidth="150.0" />
-                  <Label layoutX="15.0" layoutY="50.0" text="Código :">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="codigo_salida" layoutX="80.0" layoutY="48.0" prefHeight="25.0" prefWidth="150.0" />
-                  <Label layoutX="260.0" layoutY="12.0" text="Descripción :">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextArea layoutX="360.0" layoutY="10.0" prefHeight="60.0" prefWidth="360.0" AnchorPane.bottomAnchor="7.0" AnchorPane.topAnchor="10.0" />
-               </children>
-            </AnchorPane>
-            <AnchorPane fx:id="pedidoTable" layoutY="175.0" maxHeight="466.0" maxWidth="750.0" prefHeight="407.0" prefWidth="750.0">
-               <children>
-                  <TableView fx:id="tabla_envios_salida" layoutX="15.0" layoutY="160.0" prefHeight="200.0" prefWidth="540.0">
-                     <columns>
-                        <TableColumn fx:id="columna_envio_cod_salida" prefWidth="149.0" text="Código" />
-                        <TableColumn fx:id="columna_envio_cliente_salida" prefWidth="123.0" text="Cliente" />
-                        <TableColumn fx:id="columna_envio_pedido_salida" prefWidth="131.0" text="Pedido" />
-                        <TableColumn fx:id="columna_envio_estado_salida" prefWidth="136.0" text="Estado" />
-                     </columns>
-                     <columnResizePolicy>
-                     </columnResizePolicy>
-                  </TableView>
-               </children>
-            </AnchorPane>
-         </children>
-      </AnchorPane>
       <AnchorPane layoutX="4.0" layoutY="6.0" prefHeight="572.0" prefWidth="250.0">
          <children>
             <TableView fx:id="tabla_salidas" layoutX="13.0" layoutY="219.0" prefHeight="301.0" prefWidth="226.0">
@@ -176,6 +66,133 @@
                   <Font size="14.0" />
                </font>
             </Label>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="envio_formulario" layoutX="260.0" layoutY="-1.0" prefHeight="572.0" prefWidth="750.0">
+         <children>
+            <AnchorPane layoutX="1.0" prefHeight="51.0" prefWidth="750.0" AnchorPane.bottomAnchor="522.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
+               <children>
+                  <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="51.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
+                  <Label fx:id="LabelPedido" layoutX="38.0" layoutY="11.0" text="Detalle Orden de salida:">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <Line endX="600.0" layoutX="133.0" layoutY="49.0" startX="-100.0" />
+                  <Label layoutX="117.0" layoutY="11.0">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="15.0" layoutY="60.0" prefHeight="80.0" prefWidth="728.0">
+               <children>
+                  <Label layoutX="15.0" layoutY="12.0" text="Tipo :">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <ComboBox fx:id="tipos" layoutX="80.0" layoutY="10.0" prefWidth="150.0" />
+                  <Label layoutX="15.0" layoutY="50.0" text="Código :">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="codigo_salida" layoutX="80.0" layoutY="48.0" prefHeight="25.0" prefWidth="150.0" />
+                  <Label layoutX="260.0" layoutY="12.0" text="Descripción :">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TextArea fx:id="descripcion_envio" layoutX="360.0" layoutY="10.0" prefHeight="60.0" prefWidth="360.0" AnchorPane.bottomAnchor="7.0" AnchorPane.topAnchor="10.0" />
+               </children>
+            </AnchorPane>
+            <TabPane layoutY="140.0" prefHeight="442.0" prefWidth="750.0" tabClosingPolicy="UNAVAILABLE">
+              <tabs>
+                <Tab text="Envios">
+                     <content>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <AnchorPane prefHeight="188.0" prefWidth="750.0">
+                                 <children>
+                                    <Label layoutX="15.0" layoutY="10.0" text="Productos del envio">
+                                       <font>
+                                          <Font size="16.0" />
+                                       </font>
+                                    </Label>
+                                    <TableView fx:id="tabla_productos" layoutX="15.0" layoutY="40.0" prefHeight="140.0" prefWidth="550.0">
+                                      <columns>
+                                        <TableColumn fx:id="envio_cod_producto" prefWidth="152.0" text="Código" />
+                                        <TableColumn fx:id="envio_nombre_producto" minWidth="0.0" prefWidth="162.0" text="Nombre" />
+                                          <TableColumn fx:id="envio_desc_producto" minWidth="0.0" prefWidth="224.0" text="Descripcion" />
+                                      </columns>
+                                       <columnResizePolicy>
+                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                       </columnResizePolicy>
+                                    </TableView>
+                                    <Button fx:id="buscar_envio_button" layoutX="590.0" layoutY="40.0" mnemonicParsing="false" onAction="#handle_buscar_pedido" prefHeight="25.0" prefWidth="145.0" text="Buscar envio">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Button>
+                                    <Label layoutX="590.0" layoutY="80.0" text="Código Envio" />
+                                    <TextField fx:id="envio_dato" layoutX="590.0" layoutY="100.0" />
+                                    <Label layoutX="590.0" layoutY="130.0" text="Código Pedido" />
+                                    <TextField fx:id="pedido_dato" layoutX="590.0" layoutY="160.0" />
+                                 </children>
+                              </AnchorPane>
+                              <Label layoutX="15.0" layoutY="190.0" text="Productos de la orden de salida">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </Label>
+                              <TableView fx:id="tabla_envios_salida" layoutX="15.0" layoutY="220.0" prefHeight="180.0" prefWidth="550.0">
+                                <columns>
+                                  <TableColumn fx:id="columna_envio_cod_salida" prefWidth="118.0" text="Código" />
+                                  <TableColumn fx:id="columna_envio_cliente_salida" prefWidth="152.0" text="Cliente" />
+                                    <TableColumn fx:id="columna_envio_pedido_salida" prefWidth="141.0" text="Pedido" />
+                                    <TableColumn fx:id="columna_envio_estado_salida" prefWidth="138.0" text="Estado" />
+                                </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                              </TableView>
+                              <TitledPane animated="false" collapsible="false" layoutX="575.0" layoutY="220.0" minHeight="-Infinity" prefHeight="180.0" prefWidth="163.0" text="Acciones">
+                                 <content>
+                                    <AnchorPane prefHeight="200.0" prefWidth="158.0">
+                                       <children>
+                                          <Button layoutX="23.0" layoutY="24.0" mnemonicParsing="false" onAction="#agregar_envio" prefHeight="40.0" prefWidth="125.0" text="Agregar Envio" AnchorPane.topAnchor="24.0" />
+                                          <Button layoutX="22.0" layoutY="100.0" mnemonicParsing="false" onAction="#eliminar_envio" prefHeight="40.0" prefWidth="125.0" text="Eliminar Envio" />
+                                       </children>
+                                    </AnchorPane>
+                                 </content>
+                              </TitledPane>
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </Tab>
+                <Tab text="Otros">
+                     <content>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <Label layoutX="15.0" layoutY="30.0" text="Producto">
+                                 <font>
+                                    <Font size="16.0" />
+                                 </font>
+                              </Label>
+                              <TextField layoutX="100.0" layoutY="28.0" prefWidth="500.0" />
+                              <TableView layoutX="15.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0">
+                                <columns>
+                                  <TableColumn prefWidth="75.0" text="C1" />
+                                  <TableColumn prefWidth="75.0" text="C2" />
+                                </columns>
+                              </TableView>
+                           </children>
+                        </AnchorPane>
+                     </content></Tab>
+              </tabs>
+            </TabPane>
          </children>
       </AnchorPane>
    </children>
