--- a/src/main/java/fxml/Despachos/OrdenesDeSalida/OrdenesDeSalida.fxml
+++ b/src/main/java/fxml/Despachos/OrdenesDeSalida/OrdenesDeSalida.fxml
@@ -32,7 +32,7 @@
                </columnResizePolicy>
             </TableView>
             <TextField fx:id="salida_buscar" layoutX="118.0" layoutY="67.0" prefHeight="27.0" prefWidth="114.0" />
-            <Button layoutX="136.0" layoutY="178.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Buscar" />
+            <Button layoutX="136.0" layoutY="178.0" mnemonicParsing="false" onAction="#buscar_salida" prefHeight="25.0" prefWidth="96.0" text="Buscar" />
             <Line endX="100.0" layoutX="136.0" layoutY="50.0" startX="-100.0" />
             <TextField fx:id="cliente_buscar" layoutX="119.0" layoutY="101.0" prefHeight="27.0" prefWidth="114.0" />
             <Label layoutX="20.0" layoutY="104.0" prefHeight="21.0" prefWidth="114.0" text="Cliente">
@@ -68,12 +68,12 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="envio_formulario" layoutX="260.0" layoutY="-1.0" prefHeight="572.0" prefWidth="750.0">
+      <AnchorPane fx:id="salida_formulario" layoutX="260.0" layoutY="-1.0" prefHeight="572.0" prefWidth="750.0">
          <children>
             <AnchorPane layoutX="1.0" prefHeight="51.0" prefWidth="750.0" AnchorPane.bottomAnchor="522.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
                <children>
                   <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="51.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label fx:id="LabelPedido" layoutX="38.0" layoutY="11.0" text="Detalle Orden de salida:">
+                  <Label layoutX="38.0" layoutY="11.0" text="Orden de salida :">
                      <font>
                         <Font size="20.0" />
                      </font>
@@ -86,7 +86,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="15.0" layoutY="60.0" prefHeight="80.0" prefWidth="728.0">
+            <AnchorPane layoutY="60.0" prefHeight="80.0" prefWidth="728.0">
                <children>
                   <Label layoutX="15.0" layoutY="12.0" text="Tipo :">
                      <font>
@@ -110,60 +110,66 @@
             </AnchorPane>
             <TabPane layoutY="140.0" prefHeight="442.0" prefWidth="750.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
-                <Tab text="Envios">
+                <Tab text="Tipos de productos">
                      <content>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                            <children>
                               <AnchorPane prefHeight="188.0" prefWidth="750.0">
                                  <children>
-                                    <Label layoutX="15.0" layoutY="10.0" text="Productos del envio">
+                                    <Label layoutX="15.0" layoutY="10.0" text="Tipos de producto">
                                        <font>
                                           <Font size="16.0" />
                                        </font>
                                     </Label>
-                                    <TableView fx:id="tabla_productos" layoutX="15.0" layoutY="40.0" prefHeight="140.0" prefWidth="550.0">
+                                    <TableView fx:id="tabla_tipos" layoutX="15.0" layoutY="40.0" prefHeight="140.0" prefWidth="550.0">
                                       <columns>
-                                        <TableColumn fx:id="envio_cod_producto" prefWidth="152.0" text="Código" />
-                                        <TableColumn fx:id="envio_nombre_producto" minWidth="0.0" prefWidth="162.0" text="Nombre" />
-                                          <TableColumn fx:id="envio_desc_producto" minWidth="0.0" prefWidth="224.0" text="Descripcion" />
+                                        <TableColumn fx:id="columna_cod_tipo" prefWidth="152.0" text="Código" />
+                                        <TableColumn fx:id="columna_nombre_tipo" minWidth="0.0" prefWidth="162.0" text="Nombre" />
+                                          <TableColumn fx:id="columna_cant_tipo" prefWidth="75.0" text="Cantidad" />
+                                          <TableColumn fx:id="columna_desc_tipo" minWidth="0.0" prefWidth="224.0" text="Descripción" />
                                       </columns>
                                        <columnResizePolicy>
                                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                        </columnResizePolicy>
                                     </TableView>
-                                    <Button fx:id="buscar_envio_button" layoutX="590.0" layoutY="40.0" mnemonicParsing="false" onAction="#handle_buscar_pedido" prefHeight="25.0" prefWidth="145.0" text="Buscar envio">
+                                    <Button fx:id="boton_tipo" layoutX="575.0" layoutY="40.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="145.0" text="Buscar Tipo" visible="false">
                                        <font>
                                           <Font size="14.0" />
                                        </font>
                                     </Button>
-                                    <Label layoutX="590.0" layoutY="80.0" text="Código Envio" />
-                                    <TextField fx:id="envio_dato" layoutX="590.0" layoutY="100.0" />
-                                    <Label layoutX="590.0" layoutY="130.0" text="Código Pedido" />
-                                    <TextField fx:id="pedido_dato" layoutX="590.0" layoutY="160.0" />
+                                    <Button fx:id="boton_envio" layoutX="575.0" layoutY="40.0" mnemonicParsing="false" onAction="#handle_buscar_envio" prefHeight="25.0" prefWidth="145.0" text="Buscar envio" visible="false">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Button>
+                                    <TextField fx:id="envio_dato" layoutX="575.0" layoutY="100.0" visible="false" />
+                                    <Label fx:id="lbl_codigo_pedido" layoutX="575.0" layoutY="130.0" text="Código Pedido" visible="false" />
+                                    <TextField fx:id="pedido_dato" layoutX="575.0" layoutY="155.0" visible="false" />
+                                    <Label fx:id="lbl_codigo_envio" layoutX="575.0" layoutY="80.0" text="Código Envio" visible="false" />
                                  </children>
                               </AnchorPane>
-                              <Label layoutX="15.0" layoutY="190.0" text="Productos de la orden de salida">
+                              <Label layoutX="15.0" layoutY="190.0" text="Tipos de productos de la orden de salida">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
                               </Label>
-                              <TableView fx:id="tabla_envios_salida" layoutX="15.0" layoutY="220.0" prefHeight="180.0" prefWidth="550.0">
+                              <TableView fx:id="tabla_tipos_salida" layoutX="15.0" layoutY="220.0" prefHeight="180.0" prefWidth="550.0">
                                 <columns>
-                                  <TableColumn fx:id="columna_envio_cod_salida" prefWidth="118.0" text="Código" />
-                                  <TableColumn fx:id="columna_envio_cliente_salida" prefWidth="152.0" text="Cliente" />
-                                    <TableColumn fx:id="columna_envio_pedido_salida" prefWidth="141.0" text="Pedido" />
-                                    <TableColumn fx:id="columna_envio_estado_salida" prefWidth="138.0" text="Estado" />
+                                  <TableColumn fx:id="columna_cod_tipo_salida" prefWidth="118.0" text="Código" />
+                                  <TableColumn fx:id="columna_nombre_tipo_salida" prefWidth="152.0" text="Nombre" />
+                                    <TableColumn fx:id="columna_cant_tipo_salida" prefWidth="141.0" text="Cantidad" />
+                                    <TableColumn fx:id="columna_desc_tipo_salida" prefWidth="138.0" text="Descripción" />
                                 </columns>
                                  <columnResizePolicy>
                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                  </columnResizePolicy>
                               </TableView>
-                              <TitledPane animated="false" collapsible="false" layoutX="575.0" layoutY="220.0" minHeight="-Infinity" prefHeight="180.0" prefWidth="163.0" text="Acciones">
+                              <TitledPane animated="false" collapsible="false" layoutX="575.0" layoutY="220.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="182.0" prefWidth="150.0" text="Acciones">
                                  <content>
-                                    <AnchorPane prefHeight="200.0" prefWidth="158.0">
+                                    <AnchorPane>
                                        <children>
-                                          <Button layoutX="23.0" layoutY="24.0" mnemonicParsing="false" onAction="#agregar_envio" prefHeight="40.0" prefWidth="125.0" text="Agregar Envio" AnchorPane.topAnchor="24.0" />
-                                          <Button layoutX="22.0" layoutY="100.0" mnemonicParsing="false" onAction="#eliminar_envio" prefHeight="40.0" prefWidth="125.0" text="Eliminar Envio" />
+                                          <Button layoutX="22.0" layoutY="25.0" mnemonicParsing="false" onAction="#agregar_tipos_salida" prefHeight="40.0" prefWidth="125.0" text="Agregar" AnchorPane.topAnchor="25.0" />
+                                          <Button layoutX="22.0" layoutY="100.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="Eliminar" />
                                        </children>
                                     </AnchorPane>
                                  </content>
@@ -172,22 +178,36 @@
                         </AnchorPane>
                      </content>
                   </Tab>
-                <Tab text="Otros">
+                <Tab text="Productos específicos">
                      <content>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                            <children>
-                              <Label layoutX="15.0" layoutY="30.0" text="Producto">
+                              <Button layoutX="450.0" layoutY="30.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="Agregar">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Button>
+                              <Button layoutX="600.0" layoutY="30.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="125.0" text="Eliminar">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Button>
+                              <TableView fx:id="tabla_productos" layoutX="15.0" layoutY="80.0" prefHeight="315.0" prefWidth="710.0">
+                                <columns>
+                                  <TableColumn fx:id="columna_cod_prod" prefWidth="75.0" text="Código" />
+                                  <TableColumn fx:id="columna_nombre_prod" prefWidth="75.0" text="Nombre" />
+                                    <TableColumn fx:id="columna_tipo_prod" prefWidth="75.0" text="Tipo" />
+                                    <TableColumn fx:id="columna_fecha_prod" prefWidth="75.0" text="Fecha de Ingreso" />
+                                </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                              </TableView>
+                              <Label layoutX="15.0" layoutY="30.0" text="Productos">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
                               </Label>
-                              <TextField layoutX="100.0" layoutY="28.0" prefWidth="500.0" />
-                              <TableView layoutX="15.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0">
-                                <columns>
-                                  <TableColumn prefWidth="75.0" text="C1" />
-                                  <TableColumn prefWidth="75.0" text="C2" />
-                                </columns>
-                              </TableView>
                            </children>
                         </AnchorPane>
                      </content></Tab>
