--- a/src/main/java/fxml/Despachos/OrdenesDeSalida/OrdenesDeSalida.fxml
+++ b/src/main/java/fxml/Despachos/OrdenesDeSalida/OrdenesDeSalida.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -17,7 +18,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Facturacion.OrdenesDeSalidaController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Facturacion.OrdenesDeSalidaController">
    <children>
       <AnchorPane layoutX="4.0" layoutY="6.0" prefHeight="572.0" prefWidth="250.0">
          <children>
@@ -142,10 +143,12 @@
                                           <Font size="14.0" />
                                        </font>
                                     </Button>
+                                    <Label fx:id="lbl_codigo_envio" layoutX="575.0" layoutY="80.0" text="Código Envio" visible="false" />
                                     <TextField fx:id="envio_dato" layoutX="575.0" layoutY="100.0" visible="false" />
                                     <Label fx:id="lbl_codigo_pedido" layoutX="575.0" layoutY="130.0" text="Código Pedido" visible="false" />
                                     <TextField fx:id="pedido_dato" layoutX="575.0" layoutY="155.0" visible="false" />
-                                    <Label fx:id="lbl_codigo_envio" layoutX="575.0" layoutY="80.0" text="Código Envio" visible="false" />
+                                    <Label fx:id="lbl_cant_tipo" layoutX="575.0" layoutY="130.0" text="Cantidad para agregar" visible="false" />
+                                    <Spinner fx:id="sp_cant_tipo" layoutX="575.0" layoutY="155.0" visible="false" />
                                  </children>
                               </AnchorPane>
                               <Label layoutX="15.0" layoutY="190.0" text="Tipos de productos de la orden de salida">
