--- a/src/main/java/fxml/RecursosHumanos/Usuarios/Usuarios.fxml
+++ b/src/main/java/fxml/RecursosHumanos/Usuarios/Usuarios.fxml
@@ -129,7 +129,7 @@
                   </GridPane>
                </children>
             </GridPane>
-            <GridPane>
+            <GridPane fx:id="DetalleUsuario">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="15.0" />
                 <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="582.0" />
