--- a/src/main/java/fxml/Materiales/Productos/Productos.fxml
+++ b/src/main/java/fxml/Materiales/Productos/Productos.fxml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -19,11 +14,14 @@
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="producton_container" prefHeight="572.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Materiales.ProductosController">
+<AnchorPane id="AnchorPane" fx:id="producton_container" prefHeight="572.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Materiales.ProductosController">
     <children>
         <AnchorPane prefHeight="575.0" prefWidth="1000.0">
            <children>
@@ -325,29 +323,19 @@
                                            <Font size="20.0" />
                                         </font>
                                      </Label>
-                                     <TableView fx:id="TablaProductosUnicos" layoutX="31.0" layoutY="69.0" prefHeight="391.0" prefWidth="511.0">
+                                     <TableView fx:id="TablaProductosUnicos" layoutX="14.0" layoutY="69.0" prefHeight="391.0" prefWidth="610.0">
                                        <columns>
-                                         <TableColumn fx:id="ColumnaCodigoUnicos" prefWidth="101.0" text="Código" />
-                                         <TableColumn fx:id="ColumnaEntradaUnicos" prefWidth="142.0" text="Cod Ord. Entrada" />
-                                          <TableColumn fx:id="ColumnaIngresoUnicos" prefWidth="112.0" text="Fecha Ingreso" />
-                                          <TableColumn fx:id="ColumnaUbicacionUnicos" prefWidth="154.0" text="Ubicacion" />
+                                         <TableColumn fx:id="ColumnaCantidadUnicos" prefWidth="74.0" text="Cantidad" />
+                                          <TableColumn fx:id="ColumnaUnicosAlmacen" prefWidth="123.0" text="Almacen" />
+                                         <TableColumn fx:id="ColumnaCodRacksUnicos" prefWidth="131.0" text="Codigo Rack" />
+                                          <TableColumn fx:id="ColumnaPosicionUnicos" prefWidth="84.0" text="Posicion" />
+                                          <TableColumn fx:id="ColumnaNivelUnicos" prefWidth="65.0" text="Nivel" />
+                                          <TableColumn fx:id="ColumnaCapacidadRestante" prefWidth="132.0" text="Capacidad Restante" />
                                        </columns>
                                        <columnResizePolicy>
                                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                        </columnResizePolicy>
                                      </TableView>
-                                     <TitledPane animated="false" collapsible="false" layoutX="571.0" layoutY="94.0" prefHeight="289.0" prefWidth="153.0" text="Acciones">
-                                        <content>
-                                           <AnchorPane prefHeight="263.0" prefWidth="150.0">
-                                              <children>
-                                                 <Button layoutX="56.0" layoutY="58.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="E" AnchorPane.topAnchor="58.0" />
-                                                 <Button layoutX="56.0" layoutY="159.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="X" />
-                                                 <Label layoutX="55.0" layoutY="115.0" text="Ingresar" />
-                                                 <Label layoutX="44.0" layoutY="214.0" text="Movimiento" />
-                                              </children>
-                                           </AnchorPane>
-                                        </content>
-                                     </TitledPane>
                                   </children>
                                </AnchorPane>
                             </content>
